--- a/css/png.css
+++ b/css/png.css
@@ -1,4 +1,11 @@
+/*/
+<div id="splash">
+<div id="splash-logo">読み込み中</div>
+<!--/splash--></div>
+<div class="splashbg"></div><!---画面遷移用-->
 
+<div id="container">
+/*/
 /*========= ローディング画面のためのCSS ===============*/
 #splash {
 	position: fixed;
