--- a/css/animation_0.css
+++ b/css/animation_0.css
@@ -1,22 +1,8 @@
 .button-56 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border: none;
-    border-radius: 5px;
+    color: #2589d0;
     background-color: #2589d0;
 }
 
-.button-56:hover {
-    border: 1px solid #2589d0;
-    background-color: #fff;
-}
-
-.button-56:hover path {
-    fill: #2589d0;
-}
 
 /*========= ローディング画面のためのCSS ===============*/
 #splash {
