--- a/css/animation_0.css
+++ b/css/animation_0.css
@@ -1,5 +1,8 @@
-splash {
-	font-size: 14px;
+count {
+	font-size: 40px;
+}
+count2 {
+	font-size: 40px;
 }
 
 /*========= ローディング画面のためのCSS ===============*/
