--- a/css/animation_0.css
+++ b/css/animation_0.css
@@ -4,6 +4,31 @@ count {
 count2 {
 	font-size: 40px;
 }
+count3 {
+	font-size: 40px;
+}
+count4 {
+	font-size: 40px;
+}
+count5 {
+	font-size: 40px;
+}
+count6 {
+	font-size: 40px;
+}
+count7 {
+	font-size: 40px;
+}
+count8 {
+	font-size: 40px;
+}
+count9 {
+	font-size: 40px;
+}
+
+
+
+
 
 /*========= ローディング画面のためのCSS ===============*/
 #splash {
