--- a/css/style_2.css
+++ b/css/style_2.css
@@ -9,18 +9,13 @@
 /*全体の設定
 ---------------------------------------------------------------------------*/
 
-.handwriting {
-    font-family: "YuGothic", "Yu Gothic", "ユーゴシック体", sans-serif;
-    /* 手書きフォント */
-}
-
-html,body {min-height: 100%;}
+//html,body {min-height: 100%;}
 body {
 	margin: 0px;
 	padding: 0px;
 	color: #666;	/*全体の文字色*/
-        font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-//	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;	/*フォント種類*/
+      //  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;	/*フォント種類*/
 	font-size: 14px;	/*文字サイズ*/
 	line-height: 2;		/*行間*/
 	-webkit-text-size-adjust: none;
